test/classes/delete-free/undecorated-generic/no-coercion-management-type2.good
no-coercion-management-type2.chpl:8: error: unresolved call 'f(type unmanaged Child)'
no-coercion-management-type2.chpl:4: note: this candidate did not match: f(type t: borrowed Child)
no-coercion-management-type2.chpl:8: note: because call actual argument #1 with type unmanaged Child
no-coercion-management-type2.chpl:4: note: is passed to formal 't: borrowed Child'
