test/classes/delete-free/undecorated-generic/no-coercion-management-type2.chpl
class Parent { }
class Child : Parent { }

proc f(type t: borrowed Child) {
  writeln(t:string);
}

f(unmanaged Child);
